CHANGELOG RoundCube Webmail
---------------------------

2008/02/05 (thomasb)
----------
- Fix regular expression for checking e-mail address (#1484710)
- Make sending of read receipts configurable
- Respect config when localize folder names (#1484707)
- Applied patch for updating page title (#1484727, #1484650)
- Applied patch to prevent from purging inbox by uberlinuxguy (#1484449)
- Add CSS hack for Safari

2008/02/02 (thomasb)
----------
- Always update $CONFIG with user prefs (#1484729)
- Don't ask for MDN confirmations on drafted messages (#1484691)

2008/01/31 (robin)
- Remember search results (closes #1483883), patch by the_glu

2008/01/08 (tomekp)
----------
- add he (Hebrew) localization (#1484713)

2008/01/08 (tomekp)
----------
- update fr localization

2008/01/04 (tomekp)
- purge kur_KU because it has no messages translation
- bump copyright for all localization files

2007/12/31 (tomekp)
----------
- update es localization

2007/12/28 (tomekp)
----------
- update mk localization

2007/12/27 (tomekp)
----------
- update se localization

2007/12/13 (robin)
----------
- Add Received header on outgoing mail

2007/12/10 (estadtherr)
----------
- Upgrade to TinyMCE 2.1.3
- Allow inserting image attachments into HTML messages while composing (#1484557)

2007/12/10 (thomasb)
----------
- Delegate user-stuff to new class rcube_user
- Implement Message-Disposition-Notification (Receipts)

2007/12/05 (tomekp)
----------
- update bg, uk localization

2007/12/04 (tomekp)
----------
- update bg localization

2007/11/25 (thomasb)
----------
- Applied UID fetch patch by Glen Ogilvie
- Applied patch for correct Postgres instructions from ticket #1484674
- Fix overriding of session vars when register_globals is on (#1484670)
- Fix wrong Postgres setup instructions in INSTALL (#1484674)
- Fix bug with case-sensitive folder names (#1484245)
- Don't create default folders by default
- Added Georgian localization by Zaza Zviadadze
- Updated Russian localization